--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,7 @@
 
 .main-header__nav {
     display    : flex;
+    justify-content: space-between;
     width      : 100%;
     height     : 100%;
     align-items: center;
@@ -19,6 +20,7 @@
 
 .main-header__item-list {
     display: flex;
+    align-items: center;
 
 }
 
@@ -34,6 +36,14 @@
 
 .main-header__item a.active,
 .main-header__item a:active,
-.main-header__item a:hover {
+.main-header__item a:hover,
+.main-header__item .logout-form button:hover {
     color: blue;
+}
+.main-header__item .logout-form button{
+    border: none;
+    background-color: rgb(3, 97, 126);
+    color:white;
+    cursor: pointer;
+    outline: none;
 }
