--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -10,9 +10,10 @@ block content
                 li.card-product-item 
                     p.title #{productCart.title}  (#{productCart.quantity}) 
                     form.form-action(action="/shop/cart/delete", method="post")
+                        input(type="hidden" name='_csrf' value=csrfToken)
                         button.btn.btn-delete-cart(type='submit' value=productCart.productId name='productCartId') Delete
         form.form-action(action="/shop/orders", method="post")
-             button.btn.btn-delete-cart(type='submit') Order Now !
+             button.btn.btn-delete-cart(type='submit' name='_csrf' value=csrfToken) Order Now !
     
       
 
